# package-llm

./: .docs-manifest.yml  .gitignore  AGENT-INSTRUCTION-FIX-LLM.md  AGENT-INSTRUCTION-FIX-UT-SKIPS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  DATA-MODEL.md  MCP-MIGRATION.md  NOTICE  README.md  REQUIREMENTS.md  TESTS.md  adoption_test.py  defaults.yaml  pyproject.toml
cloud_dog_llm/: __init__.py  factory.py  traceability_ids.py
cloud_dog_llm/a2a/: __init__.py  client.py  envelope.py
cloud_dog_llm/artefacts/: __init__.py  base.py  local.py  memory.py  models.py  s3.py  store.py
cloud_dog_llm/availability/: __init__.py  gating.py
cloud_dog_llm/compat/: __init__.py  formatter_compat.py  response_adapter.py
cloud_dog_llm/config/: __init__.py  code_generation.py  models.py  registry.py  settings.py
cloud_dog_llm/domain/: __init__.py  enums.py  errors.py  models.py
cloud_dog_llm/embeddings/: __init__.py  base.py  manager.py  ollama.py  openai_compat.py  providers.py
cloud_dog_llm/mcp/: __init__.py  client.py  fastmcp.py  session.py  transport.py
cloud_dog_llm/middleware/: __init__.py  base.py  reliability.py
cloud_dog_llm/multimodal/: __init__.py  handler.py  models.py
cloud_dog_llm/observability/: __init__.py  audit.py  logging.py  metrics.py  otel.py  redaction.py
cloud_dog_llm/prompts/: __init__.py  agentic.py  registry.py  render.py  template.py
cloud_dog_llm/providers/: __init__.py  anthropic.py  (+7 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXAMPLES.md
scaffold/: pyproject.toml
scaffold/cloud_dog_llm/: __init__.py
scaffold/tests/: conftest.py
tests/: __init__.py  conftest.py  env-AT  env-IT  env-ST  env-UT  test_traceability_ids.py
working/: W28A-119-FIX-LLM-REPORT.md
(+118 files in other folders)
