[project]
name = "cloud-dog-llm"
version = "0.1.0"
description = "PS-50 LLM Interfaces for Cloud-Dog services"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.optional-dependencies]
config = ["cloud-dog-config>=0.1.0"]
logging = ["cloud-dog-logging>=0.1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
s3 = ["boto3>=1.34"]
otel = ["opentelemetry-api>=1.20"]
jwt = ["pyjwt[crypto]>=2.8"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
